# lapismyt-lol-v2

./: .dockerignore  .gitignore  Dockerfile  docker-compose.dev.yml  docker-compose.yml  init-letsencrypt.sh  main.py  pyproject.toml
nginx/: nginx-certbot.conf  nginx.conf  nginx.dev.conf
static/: robots.txt  sitemap.xml  tonconnect-manifest.json
static/css/: styles.css
static/js/: age_full_getter.js  current_time_getter.js  scripts.js
templates/: base.html  index.html  jetton-vanity-deployer.html
